rust/tenx-websummary-derive/tests/ui_derive_form/derive_unsupported.stderr
error: HtmlForm can only be derived for structs with named fields or enum with unit variants. Unsupported shape `named`
 --> tests/ui_derive_form/derive_unsupported.rs:3:10
  |
3 | #[derive(HtmlForm)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `HtmlForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: HtmlForm can only be derived for structs with named fields or enum with unit variants. Unsupported shape `newtype`
 --> tests/ui_derive_form/derive_unsupported.rs:9:10
  |
9 | #[derive(HtmlForm)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `HtmlForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: HtmlForm can only be derived for structs with named fields or enum with unit variants. Unsupported shape `newtype`
  --> tests/ui_derive_form/derive_unsupported.rs:15:10
   |
15 | #[derive(HtmlForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `HtmlForm` (in Nightly builds, run with -Z macro-backtrace for more info)
